Minor update to UI to show unactive

--- a/src/index.html
+++ b/src/index.html
@@ -49,6 +49,8 @@
                   <th>Image</th>
                   <th>Contract</th>
                   <th>Event Type</th>
+                  <th>Disabled Discord</th>
+                  <th>Disabled Twitter</th>
                 </tr>
               </thead>
               <tbody id="mainBody">
